--- a/styles.css
+++ b/styles.css
@@ -177,12 +177,21 @@ body {
 .experiences {
     flex: 1 1 60%;
     margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .experiences__header {
     color: var(--secondary-text-color);
     text-align: left;
     margin-bottom: 20px;
+}
+
+.experiences-listing {
+    display: flex;
+    flex-direction: row;
+    gap: 3em;
 }
 
 .experiences__company-header-durability {
@@ -266,4 +275,12 @@ body {
 
 .additional-info__languages-item {
     color: var(--secondary-text-color);
+}
+
+a {
+    all: unset;
+}
+
+a:hover {
+    cursor: pointer;
 }
