--- a/styles.css
+++ b/styles.css
@@ -240,9 +240,14 @@ body {
     margin-bottom: 20px;
 }
 
+.education-listing {
+    display: flex;
+    gap: 3em;
+}
+
 .additional-info__education-header {
     color: var(--secondary-text-color);
-    text-align: left;
+    text-align: center;
     margin-bottom: 20px;
 }
 
